Fixed reload bug

--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
             <div id="greenBar"></div>
         </div>
     </div>
-    <div id="currentPower"></div>
+    <div id="currentPower">0&thinsp;W</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch-jsonp/1.0.6/fetch-jsonp.min.js"></script>
 <script src="animation/lottie.js"></script>
